# Video_RAG_x_MCP

./: .gitignore  .python-version  MCP_SETUP.md  MCP_Video_RAG_Development_Plan.md  MCP_Video_RAG_PRD.md  README.md  clear_database.py  driver.py  mcp_driver.py  mcp_server.py  pipeline_report.json  pipeline_verification.json  proof_of_success.py  pyproject.toml  requirements.txt  test_chromadb.py  verify_chromadb_embeddings.py  video_rag_development_plan.md  video_rag_diagrams.html
config/: default.yaml
docs/: video_rag_development_plan.md  video_rag_prd.md
examples/: dependency_injection_examples.py
src/phase1_audio/: __init__.py  embed_text.py  embed_text_semantic.py  extract_transcribe.py  pipeline_demo.py  segment_transcript.py  segment_transcript_semantic.py
src/phase2_visual/: __init__.py  embed_frames.py  processor.py  sample_frames.py
src/phase3_db/: __init__.py  client.py  ingest.py  models.py  retriever.py
src/phase4_retriever/: __init__.py  cli.py  embed_query.py  models.py  retriever.py  test_phase4.py
src/phase5_generation/: __init__.py  llm_integration.py  prompt_templates.py  qa_service.py
src/video_rag/: __init__.py
src/video_rag/cli/: __init__.py
src/video_rag/config/: __init__.py  manager.py
tests/: __init__.py  final_phase1_test.py  test_complete_pipeline_analysis.py  test_complete_semantic_pipeline.py  test_phase1_audio.py  test_phase3_models_only.py  test_phase3_vector_store.py  test_semantic_chunking.py  test_simplified_semantic_pipeline.py
tests/integration/: __init__.py
tests/unit/: __init__.py
videos/: .gitkeep
(+20 files in other folders)
